Fix bottom spacing

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -87,13 +87,13 @@ body {
 }
 
 article {
-  padding: 2rem 0;
+  padding: 2rem 0 4rem 0;
   display: flex;
   flex-direction: column;
 }
 
 footer {
-  margin: -2rem 0 0 0;
+  margin: -4rem 0 4rem 0;
   display: flex;
   flex-direction: column;
 }
